feat:添加了取消功能，超时功能 update:使用 script 脚本引入 doc:添加文档

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-<script src="dist/main.js"></script>
+<button>取消按钮</button>
+<script src="InterceptorManager.js"></script>
+<script src="FetchAxios.js"></script>
+<script src="index.js"></script>
 </body>
 </html>
